# threshold-oprf-v2

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  dkg-data.json
.github/workflows/: build-ami.yml  build-azure-image.yml  build-ceremony.yml  build-linux-cli.yml  build-macos-cli.yml  build-nitro-image.yml  check.yml  ci.yml
contracts/: .env.example  deploy.sh  dkg-data.example.json  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: TOPRFRegistry.sol
contracts/test/: TOPRFRegistry.t.sol
crates/core/: Cargo.toml
crates/core/src/: combine.rs  hash_to_curve.rs  lib.rs  partial_eval.rs  reshare.rs  shamir.rs  types.rs
crates/dkg-cli/: Cargo.toml
crates/dkg-cli/src/: main.rs
crates/dkg-node/: Cargo.toml
crates/dkg-node/src/: main.rs
crates/keygen/: Cargo.toml
crates/keygen/src/: main.rs
crates/node/: Cargo.toml
crates/node/src/: attestation.rs  cloud_storage.rs  config.rs  configure.rs  coordinator.rs  dkg.rs  evaluate.rs  google_auth.rs  ip_rate_limit.rs  join.rs  main.rs  nitro_endpoint.rs  nitro_verify.rs  nsm.rs  outbound_proxy.rs  rate_limit.rs  reshare_handler.rs  snp_endpoint.rs  vsock_server.rs
crates/reshare-cli/: Cargo.toml
crates/reshare-cli/src/: main.rs
crates/seal/: Cargo.toml
crates/seal/src/: attestation.rs  ecies.rs  error.rs  lib.rs  provider.rs  sealing.rs  snp_report.rs
deploy/: config.env.example  deploy.sh  nodes.json.example  provision.sh
deployments/: README.md
deployments/builds/: nitro-1d261b98.json  nitro-28b430a4.json  nitro-2f3021be.json  nitro-3e7e45ee.json  nitro-44b00afc.json  nitro-4c6d6235.json  nitro-5e203eb7.json  nitro-628a1787.json  nitro-6bd51721.json  nitro-8e45fd30.json  nitro-9925af4e.json  nitro-9a9eb637.json  nitro-a42d444d.json  nitro-c74340ba.json  nitro-eeb22543.json
docker/: Dockerfile.node  docker-compose.yml
docker/sev/: Dockerfile.sev
docs/: operator-guide.md  technical-overview.md  verification-guide.md
docs/superpowers/plans/: 2026-04-01-v2-architecture-plan.md
docs/superpowers/specs/: 2026-04-01-v2-architecture-design.md
image/: build-image.sh  deploy-azure.sh  harden.sh  package-lock.json  toprf-node.service  update-lock.sh
image/nitro/: Dockerfile  README.md
lambda/: build.mjs  config.env.example  deploy.sh  package-lock.json  package.json  tsconfig.json
lambda/handlers/: attest.ts  challenge.ts  evaluate.ts
lambda/lib/providers/: attestation.ts  play-integrity.ts
lambda/lib/stores/: deviceKeys.ts
lambda/rotation/: handler.py  template.yaml
lambda/shared/: attestation.ts  dynamo-device-keys.ts  dynamo-nonces.ts  dynamo-rate-limit.ts  response.ts
scripts/: add-node-route.sh  deploy-nodes.env.example  deploy-nodes.sh  dkg-integration-test.sh  integration-test.sh  run-dkg.env.example  run-dkg.sh
verify/: Cargo.toml
verify/src/: main.rs
