[package]
name = "toprf-core"
version = "0.1.0"
edition = "2021"

[dependencies]
frost-secp256k1 = { workspace = true }
k256 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
crypto-bigint = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
