[package]
name = "toprf-dkg-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
toprf-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
k256 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
