[package]
name = "toprf-dkg-node"
version = "0.1.0"
edition = "2021"

[dependencies]
toprf-core = { path = "../core" }
toprf-seal = { path = "../seal" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
frost-secp256k1 = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }
