[package]
name = "toprf-node"
version = "0.1.0"
edition = "2021"

[dependencies]
toprf-core = { path = "../core" }
toprf-seal = { path = "../seal" }
axum = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
k256 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
zeroize = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
x25519-dalek = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
