[package]
name = "toprf-node"
version = "0.1.0"
edition = "2021"

[features]
nitro = []
snp = []

[dependencies]
toprf-core = { path = "../core" }
toprf-seal = { path = "../seal" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
frost-secp256k1 = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
zeroize = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
hmac = "0.12"
x25519-dalek = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
ciborium = { workspace = true }
p384 = { workspace = true }
x509-parser = { workspace = true }
pem = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.6"
libc = "0.2"
