[package]
name = "toprf-reshare-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
