[package]
name = "toprf-seal"
version = "0.1.0"
edition = "2021"

[dependencies]
toprf-core = { path = "../core" }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
p384 = { workspace = true }
x509-parser = { workspace = true }
rand = { workspace = true }
k256 = { workspace = true }
thiserror = { workspace = true }
pem = { workspace = true }
ring = "0.17"
zeroize = { workspace = true }
x25519-dalek = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "toprf-measure"
path = "src/bin/toprf-measure.rs"

[[bin]]
name = "toprf-init-encrypt"
path = "src/bin/toprf-init-encrypt.rs"
